[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/ScrollablePopupMenu.gd" type="Script" id=1]

[node name="ScrollablePopupMenu" type="Button"]
margin_right = 12.0
margin_bottom = 21.0
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ItemList" type="ItemList" parent="PopupPanel/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 5
allow_reselect = true
auto_height = true

[connection signal="pressed" from="." to="." method="_on_ScrollablePopupMenu_pressed"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="item_selected" from="PopupPanel/ScrollContainer/ItemList" to="." method="_on_ItemList_item_selected"]
